--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -1,10 +1,58 @@
 // -------- colors --------
 
-$clr-main_body: rgb(27, 27, 27);
+$clr-main_body: rgba(39, 39, 39, 1);
 
-// -------- style ----------
+$clr-blue_light: rgba(1, 162, 255, 1);
+$clr-blue_dark: rgba(1, 74, 255, 1);
+$clr-red: rgb(204, 30, 30);
+$clr-red_close: rgb(170, 22, 22);
 
-// -------- mixins ----------
+// $mainGradient_0: linear-gradient(to bottom, rgba(1, 162, 255, 0), rgba(1, 74, 255, 0));
+// $mainGradient_100: linear-gradient(to bottom, rgba(1, 162, 255, 1), rgba(1, 74, 255, 1));
+// $lightGray: rgba(45, 45, 45, 1);
+// $redGradient: linear-gradient(to bottom, rgba(255, 73, 73, 1), rgba(167, 0, 0, 1));
+
+// -------- style --------
+
+// &__bg {
+//     position: absolute;
+//     z-index: 1;
+//     top: 0;
+//     right: 0;
+//     left: 0;
+//     bottom: 0;
+//     &__top, &__bottom {
+//         position: absolute;
+//         top: 0;
+//         right: 0;
+//         bottom: 0;
+//         left: 0;
+//         border-radius: 20px;
+//     }
+//     &__top {
+//         z-index: 2;
+//         border: 2px solid rgba(255, 255, 255, .5)
+//     }
+//     &__bottom {
+//         z-index: 1;
+//         box-shadow: inset -30px 0px 30px 0px rgba(185, 27, 27, 0.5);
+//     }
+// }
+
+
+// -------- fonts --------
+
+$fnt-all: robotoFlex, sans-serif;
+
+// -------- mixins --------
+
+@mixin absolute_zero {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    left: 0;
+}
 
 @mixin pos_absolute($t, $r, $b, $l) {
     position: absolute;
