--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,4 +4,8 @@
 @use "elements/footer";
 @use "elements/blackoutBlock";
 @use "elements/carousel";
+@use "elements/gameV";
+@use "elements/gameH";
 @use "elements/salesHits.scss";
+@use "elements/banner";
+@use "elements/offers";
