--- a/scss/elements/_banner.scss
+++ b/scss/elements/_banner.scss
@@ -1,98 +1,18 @@
 @use '../default/base';
 
-.carousel {
-    display: flex;
-    padding: 100px 150px 15px 150px;
-    position: relative;
-    &__bg {
-        @include base.absolute-zero;
-        transition: 1s;
-        opacity: 0;
-        filter: blur(50px);
-        & > img {
-            width: 100%;
-            height: 100%;
-        }
-        &_active {
-            opacity: 0.4;
-        }
-    }
-    &__buttons {
-        position: absolute;
-        bottom: 45px;
-        right: 175px;
-        z-index: 8;
-
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-
-        padding: 15px;
-        &__button {
-            width: 55px;
-            height: 55px;
-            padding: 16px;
-            background-color: rgba(255, 255, 255, 0.1);
-            -webkit-backdrop-filter: blur(30px);
-            backdrop-filter: blur(30px);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            transition: .15s;
-            cursor: pointer;
-            & > img {
-                width: 100%;
-                filter: invert(1);
-            }
-            &:nth-child(1) img {
-                transform: rotate(180deg) translateX(2px);
-            }
-            // &:hover {
-            //     background-color: rgba(255, 255, 255, 0.2);
-            // }
-            @include base.style-glass_circ_hover;
-            &:active {
-                transform: scale(0.95);
-            }
-            &_disactive {
-                cursor: default;
-                opacity: 0.5;
-                &:hover {
-                    background-color: rgba(255, 255, 255, 0.1);
-                }
-                &:active {
-                    transform: scale(1);
-                }
-            }
-        }
-    }
-    &__grid {
-        width: 100%;
-        display: flex;
-        position: relative;
-    }
-    &__gridBG {
-        @include base.pos_absolute(-100px, 0px, -100px, 0px);
-        z-index: 1;
-    }
-    &__banner {
-        width: 100%;
-        height: 515px;
-        margin-left: -100%;
+.banner {
+    &__game {
         box-sizing: border-box;
-        transition: 0.5s;
-        position: relative;
-        overflow: hidden;
+        padding: 20px 150px 15px 150px;
         &__imgBlock {
             width: 100%;
-            height: 100%;
             border-radius: 25px;
             border: 2px solid rgba(255, 255, 255, 0.1);
-            // box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.2);
             overflow: hidden;
             & > img {
                 width: 100%;
                 display: block;
-                transition: 0.3s;
             }
         }
         &__interaction {
@@ -102,15 +22,6 @@
             margin-bottom: -159px;
             &__info {
                 display: inline-block;
-                &__link {
-                    position: absolute;
-                    top: -1000px;
-                    bottom: 0;
-                    right: 0;
-                    left: 0;
-                    z-index: 2;
-                    display: block;
-                }
                 &__title {
                     font-family: robotoFlex;
                     font-size: 28px;
@@ -118,8 +29,6 @@
                     letter-spacing: 1px;
                     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
                     margin-bottom: 10px;
-                    position: relative;
-                    z-index: 1;
                 }
                 &__shopInfo {
                     display: flex;
@@ -127,14 +36,11 @@
                     background-color: rgba(255, 255, 255, 0.1);
                     -webkit-backdrop-filter: blur(30px);
                     backdrop-filter: blur(30px);
-                    // border: 1px solid rgba(255, 255, 255, 0.3);
+                    border: 1px solid rgba(255, 255, 255, 0.3);
                     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.3);
                     border-radius: 20px;
                     padding: 15px;
-                    width: 350px;
-                    position: relative;
-                    z-index: 3;
-                    @include base.style-glass_square;
+                    min-width: 350px;
                     &__buttons {
                         display: flex;
                         gap: 10px;
@@ -143,7 +49,7 @@
                             height: 55px;
                             padding: 12px;
                             background-color: rgba(255, 255, 255, 0.1);
-                            // border: 1px solid rgba(255, 255, 255, 0.3);
+                            border: 1px solid rgba(255, 255, 255, 0.3);
                             border-radius: 50%;
                             transition: .15s;
                             cursor: pointer;
@@ -154,42 +60,36 @@
                             &:hover {
                                 background-color: rgba(255, 255, 255, 0.2);
                             }
-                            &:hover img {
-                                animation: header_nav_hover .25s ease-out 1;
-                            }
+                            // &:hover img {
+                            //     animation: header_nav_hover .25s ease-out 1;
+                            // }
                             &:active {
                                 transform: scale(0.95);
                             }
                             &_active.banner__interaction__info__shopInfo__buttons__button_favorite {
                                 // background-color: base.$lightRed;
-                                // ! background: base.$redGradient;
+                                background: base.$clr-grad_red;
                             }
                             &_active.banner__interaction__info__shopInfo__buttons__button_basket {
                                 // background-color: base.$lightBlue;
-                                // ! background: base.$mainGradient_100;
+                                background: base.$clr-grad_blue_100;
                             }
-                            @include base.style-glass_circ_hover;
                         }
-                    }
+                    }   
                     &__priceTag {
                         display: flex;
                         gap: 10px;
                         &__prices {
-                            display: flex;
-                            align-items: end;
-                            justify-content: center;
-                            flex-direction: column;
-                            gap: 0px;
                             &__newPrice {
-                                font-size: 22px;
+                                font-size: 20px;
                                 font-weight: 500;
-                                // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
                             }
                             &__oldPrice {
-                                font-size: 16px;
+                                font-size: 18px;
                                 font-weight: 400;
                                 color: rgb(200, 200, 200);
                                 text-decoration: line-through;
+                                border-top: 1px solid rgba(255, 255, 255, 0.2);
                             }
                         }
                         &__discount {
@@ -203,7 +103,6 @@
                                 left: 15px;
                                 right: 15px;
                             }
-                            @include base.style-glass_square;
                         }
                     }
                     &_dark {
@@ -221,4 +120,5 @@
             }
         }
     }
+    
 }
