--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,11 @@
 @use "default/def";
-@use "fonts/fonts.scss";
+@use "fonts/fonts";
 @use "elements/header";
 @use "elements/footer";
 @use "elements/blackoutBlock";
 @use "elements/carousel";
 @use "elements/gameV";
 @use "elements/gameH";
-@use "elements/salesHits.scss";
+@use "elements/salesHits";
 @use "elements/banner";
 @use "elements/offers";
