--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,14 @@ label {
   left: 0;
 }
 
+.fixed-zero {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
 .def-optimize_img {
   max-width: 100%;
   max-height: 100%;
@@ -163,7 +171,7 @@ label {
 .header__searchBlock > input {
   height: 45px;
   width: 600px;
-  background-color: rgba(186, 186, 186, 0.5);
+  background-color: rgba(255, 255, 255, 0.15);
   border: 1px solid rgba(186, 186, 186, 0.6);
   box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.2);
   border-radius: 23px;
@@ -176,9 +184,17 @@ label {
   font-size: 16px;
   color: rgb(255, 255, 255);
   transition: 0.15s;
+  box-shadow: inset -10px 0 20px -10px rgba(255, 255, 255, 0.3), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+}
+.header__searchBlock > input:hover {
+  border: 1px solid rgb(1, 162, 255);
+  box-shadow: inset 0px -10px 20px -10px rgba(1, 162, 255, 0.5), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
 }
 .header__searchBlock > input:focus {
-  background-color: rgba(186, 186, 186, 0.7);
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgb(1, 162, 255);
 }
 .header__searchBlock__button {
   padding: 12px;
@@ -204,17 +220,21 @@ label {
   padding: 12px;
   border-radius: 50%;
   box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.2);
-  background-color: rgba(186, 186, 186, 0.5);
+  background-color: rgba(255, 255, 255, 0.15);
   border: 1px solid rgba(186, 186, 186, 0.6);
   transition: 0.15s;
   cursor: pointer;
   margin-right: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: inset -10px 0 20px -10px rgba(255, 255, 255, 0.3), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
+}
+.header__buttonCatalog:hover {
+  border: 1px solid rgb(1, 162, 255);
+  box-shadow: inset 0px -10px 20px 0px rgba(1, 162, 255, 0.5), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
 }
 .header__buttonCatalog > svg {
   transition: 0.25s;
-}
-.header__buttonCatalog:hover {
-  background-color: rgb(1, 162, 255);
 }
 .header__buttonCatalog:active > svg {
   transform: scale(0.8);
@@ -266,7 +286,7 @@ label {
   left: 0;
   padding: 15px;
   padding-bottom: 5px;
-  border-radius: 7px;
+  border-radius: 15px;
   background: rgba(255, 255, 255, 0.1);
   -webkit-backdrop-filter: blur(30px);
   backdrop-filter: blur(30px);
@@ -275,6 +295,9 @@ label {
   border: 1px solid rgba(255, 255, 255, 0.2);
   opacity: 1;
   transform: translateY(0px);
+  box-shadow: inset -10px 0 20px -10px rgba(255, 255, 255, 0.3), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
 }
 .header__catalogNavs__head {
   border-radius: 7px;
@@ -284,6 +307,9 @@ label {
   align-items: center;
   padding: 10px;
   cursor: pointer;
+  box-shadow: inset -10px 0 20px -10px rgba(255, 255, 255, 0.3), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
 }
 .header__catalogNavs__head > svg {
   width: 20px;
@@ -319,15 +345,19 @@ label {
   border: 1px solid rgba(255, 255, 255, 0);
   cursor: pointer;
   transition: 0.15s;
+  box-shadow: inset -10px 0 20px -10px rgba(255, 255, 255, 0.3), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
 }
 .header__catalogNavs__grid__nav img {
   margin-right: 7px;
 }
-.header__catalogNavs__grid__nav:hover {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-}
 .header__catalogNavs__grid__nav:active {
   transform: scale(0.97);
+}
+.header__catalogNavs__grid__nav:hover {
+  border: 1px solid rgb(1, 162, 255);
+  box-shadow: inset 0px -10px 20px -10px rgba(1, 162, 255, 0.5), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
 }
 .header__catalogNavs_hidden {
   transform: translateY(-10px);
@@ -487,6 +517,7 @@ label {
   display: none;
 }
 .blackoutBlock_active {
+  display: block;
   opacity: 1;
 }
 
@@ -545,8 +576,7 @@ label {
   transform: rotate(180deg) translateX(2px);
 }
 .carousel__buttons__button:hover {
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-bottom: 1px solid rgb(1, 162, 255);
+  border: 1px solid rgb(1, 162, 255);
   box-shadow: inset 0px -10px 20px 0px rgba(1, 162, 255, 0.5), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
 }
 .carousel__buttons__button:active {
@@ -670,8 +700,7 @@ label {
   transform: scale(0.95);
 }
 .carousel__banner__interaction__info__shopInfo__buttons__button:hover {
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-bottom: 1px solid rgb(1, 162, 255);
+  border: 1px solid rgb(1, 162, 255);
   box-shadow: inset 0px -10px 20px 0px rgba(1, 162, 255, 0.5), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
 }
 .carousel__banner__interaction__info__shopInfo__priceTag {
@@ -811,8 +840,7 @@ label {
   filter: invert(1);
 }
 .gameV__info__buttons__button:hover {
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-bottom: 1px solid rgb(1, 162, 255);
+  border: 1px solid rgb(1, 162, 255);
   box-shadow: inset 0px -10px 20px -10px rgba(1, 162, 255, 0.5), 0 5px 10px -2px rgba(0, 0, 0, 0.2);
 }
 .gameV__info__buttons__button:active {
