--- a/scss/default/_def.scss
+++ b/scss/default/_def.scss
@@ -74,6 +74,14 @@ label {
 	left: 0;
 }
 
+.fixed-zero{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+}
+
 .def-optimize_img {
     max-width: 100%;
     max-height: 100%;
