--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -69,7 +69,8 @@
         & > input {
             height: 45px;
             width: 600px;
-            background-color: rgba(186, 186, 186, .5);
+            //! background-color: rgba(186, 186, 186, .5);
+            background-color: rgba(255, 255, 255, .15);
             border: 1px solid rgba(186, 186, 186, .6);
             box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.2);
             border-radius: 23px;
@@ -89,8 +90,11 @@
             // &:hover {
             //     background-color: rgba(186, 186, 186, 70%);
             // }
+            @include base.style-glass_square_hover;
             &:focus {
-                background-color: rgba(186, 186, 186, .7);
+                //! background-color: rgba(186, 186, 186, .7);
+                background-color: rgba(255, 255, 255, .2);
+                border: 1px solid base.$clr-blue_light;
             }
         }
         &__button {
@@ -125,18 +129,20 @@
         padding: 12px;
         border-radius: 50%;
         box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.2);
-        background-color: rgba(186, 186, 186, 0.5);
+        //! background-color: rgba(186, 186, 186, 0.5);
+        background-color: rgba(255, 255, 255, 0.15);
         border: 1px solid rgba(186, 186, 186, 0.6);
         // backdrop-filter: blur(5px);
         transition: 0.15s;
         cursor: pointer;
         margin-right: 10px;
+        @include base.style-glass_circ_hover;
         & > svg {
             transition: 0.25s;
         }
-        &:hover {
-            background-color: base.$clr-blue_light;
-        }
+        // &:hover {
+        //     background-color: base.$clr-blue_light;
+        // }
         &:active > svg {
             transform: scale(.8);
         }
@@ -193,7 +199,7 @@
         left: 0;
         padding: 15px;
         padding-bottom: 5px;
-        border-radius: 7px;
+        border-radius: 15px;
         background: rgba(255, 255, 255, 0.10);
         -webkit-backdrop-filter: blur(30px);
         backdrop-filter: blur(30px);
@@ -203,6 +209,7 @@
 
         opacity: 1;
         transform: translateY(0px);
+        @include base.style-glass_square;
         &__head {
             border-radius: 7px;
             background: rgba(16, 16, 16, 0.30);
@@ -212,6 +219,7 @@
             // gap: 1px;
             padding: 10px;
             cursor: pointer;
+            @include base.style-glass_square;
             & > svg {
                 width: 20px;
                 opacity: 0.5;
@@ -249,12 +257,13 @@
                 & img {
                     margin-right: 7px;
                 }
-                &:hover {
-                    border: 1px solid rgba(255, 255, 255, 0.5);
-                }
+                // &:hover {
+                //     border: 1px solid rgba(255, 255, 255, 0.5);
+                // }
                 &:active {
                     transform: scale(0.97);
                 }
+                @include base.style-glass_square_hover;
             }
         }
         &_hidden {
